--- a/R4_ExternalLab_KMeansClustering_Prabodh.ipynb
+++ b/R4_ExternalLab_KMeansClustering_Prabodh.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -97,61 +97,61 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>18.0</td>\n",
-       "      <td>8</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>307.0</td>\n",
        "      <td>130.0</td>\n",
        "      <td>3504.0</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>chevrolet chevelle malibu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>15.0</td>\n",
-       "      <td>8</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>350.0</td>\n",
        "      <td>165.0</td>\n",
        "      <td>3693.0</td>\n",
        "      <td>11.5</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>buick skylark 320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>18.0</td>\n",
-       "      <td>8</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>318.0</td>\n",
        "      <td>150.0</td>\n",
        "      <td>3436.0</td>\n",
        "      <td>11.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>plymouth satellite</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>16.0</td>\n",
-       "      <td>8</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>304.0</td>\n",
        "      <td>150.0</td>\n",
        "      <td>3433.0</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>amc rebel sst</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>17.0</td>\n",
-       "      <td>8</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>302.0</td>\n",
        "      <td>140.0</td>\n",
        "      <td>3449.0</td>\n",
        "      <td>10.5</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>ford torino</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -159,22 +159,22 @@
        "</div>"
       ],
       "text/plain": [
-       "    mpg  cylinders  displacement horsepower  weight  acceleration  model_year  \\\n",
-       "0  18.0          8         307.0      130.0  3504.0          12.0          70   \n",
-       "1  15.0          8         350.0      165.0  3693.0          11.5          70   \n",
-       "2  18.0          8         318.0      150.0  3436.0          11.0          70   \n",
-       "3  16.0          8         304.0      150.0  3433.0          12.0          70   \n",
-       "4  17.0          8         302.0      140.0  3449.0          10.5          70   \n",
+       "    mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
+       "0  18.0        8.0         307.0       130.0  3504.0          12.0   \n",
+       "1  15.0        8.0         350.0       165.0  3693.0          11.5   \n",
+       "2  18.0        8.0         318.0       150.0  3436.0          11.0   \n",
+       "3  16.0        8.0         304.0       150.0  3433.0          12.0   \n",
+       "4  17.0        8.0         302.0       140.0  3449.0          10.5   \n",
        "\n",
-       "   origin                   car_name  \n",
-       "0       1  chevrolet chevelle malibu  \n",
-       "1       1          buick skylark 320  \n",
-       "2       1         plymouth satellite  \n",
-       "3       1              amc rebel sst  \n",
-       "4       1                ford torino  "
+       "   model_year  origin                   car_name  \n",
+       "0        70.0     1.0  chevrolet chevelle malibu  \n",
+       "1        70.0     1.0          buick skylark 320  \n",
+       "2        70.0     1.0         plymouth satellite  \n",
+       "3        70.0     1.0              amc rebel sst  \n",
+       "4        70.0     1.0                ford torino  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,9 @@
     "columns = [\"mpg\", \"cylinders\", \"displacement\", \"horsepower\", \"weight\", \"acceleration\", \"model_year\", \"origin\", \"car_name\"] \n",
     "#names = columns\n",
     "mpg_data = pd.read_table('data/auto-mpg.data', sep=\"\\s+\")\n",
-    "mpg_data.head(5)"
+    "# mpg_data.head(5)\n",
+    "df_orig = pd.read_table('data/auto-mpg-original.data', sep=\"\\s+\")\n",
+    "df_orig.head(5)"
    ]
   },
   {
@@ -195,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -206,18 +208,18 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mpg_data.columns"
+    "df_orig.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +228,7 @@
        "(398, 9)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +239,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(406, 9)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_orig.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 406 entries, 0 to 405\n",
+      "Data columns (total 9 columns):\n",
+      "mpg             398 non-null float64\n",
+      "cylinders       406 non-null float64\n",
+      "displacement    406 non-null float64\n",
+      "horsepower      400 non-null float64\n",
+      "weight          406 non-null float64\n",
+      "acceleration    406 non-null float64\n",
+      "model_year      406 non-null float64\n",
+      "origin          406 non-null float64\n",
+      "car_name        406 non-null object\n",
+      "dtypes: float64(8), object(1)\n",
+      "memory usage: 28.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_orig.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -270,6 +322,316 @@
    "metadata": {},
    "source": [
     "# Q3 Check for missing value check, incorrect data and perform imputation with mean, median, mode as necessary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>car_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>3090.0</td>\n",
+       "      <td>17.5</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>citroen ds-21 pallas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>4142.0</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>chevrolet chevelle concours (sw)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>351.0</td>\n",
+       "      <td>153.0</td>\n",
+       "      <td>4034.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>ford torino (sw)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>383.0</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>4166.0</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>plymouth satellite (sw)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>3850.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>amc rebel sst (sw)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>3353.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>ford mustang boss 302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2046.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>ford pinto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>1978.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>volkswagen super beetle 117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2875.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>ford maverick</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>337</th>\n",
+       "      <td>40.9</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1835.0</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>renault lecar deluxe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>343</th>\n",
+       "      <td>23.6</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2905.0</td>\n",
+       "      <td>14.3</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>ford mustang cobra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>361</th>\n",
+       "      <td>34.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2320.0</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>renault 18i</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>367</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>2800.0</td>\n",
+       "      <td>15.4</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>saab 900s</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>382</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>151.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3035.0</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>amc concord dl</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
+       "10    NaN        4.0         133.0       115.0  3090.0          17.5   \n",
+       "11    NaN        8.0         350.0       165.0  4142.0          11.5   \n",
+       "12    NaN        8.0         351.0       153.0  4034.0          11.0   \n",
+       "13    NaN        8.0         383.0       175.0  4166.0          10.5   \n",
+       "14    NaN        8.0         360.0       175.0  3850.0          11.0   \n",
+       "17    NaN        8.0         302.0       140.0  3353.0           8.0   \n",
+       "38   25.0        4.0          98.0         NaN  2046.0          19.0   \n",
+       "39    NaN        4.0          97.0        48.0  1978.0          20.0   \n",
+       "133  21.0        6.0         200.0         NaN  2875.0          17.0   \n",
+       "337  40.9        4.0          85.0         NaN  1835.0          17.3   \n",
+       "343  23.6        4.0         140.0         NaN  2905.0          14.3   \n",
+       "361  34.5        4.0         100.0         NaN  2320.0          15.8   \n",
+       "367   NaN        4.0         121.0       110.0  2800.0          15.4   \n",
+       "382  23.0        4.0         151.0         NaN  3035.0          20.5   \n",
+       "\n",
+       "     model_year  origin                          car_name  \n",
+       "10         70.0     2.0              citroen ds-21 pallas  \n",
+       "11         70.0     1.0  chevrolet chevelle concours (sw)  \n",
+       "12         70.0     1.0                  ford torino (sw)  \n",
+       "13         70.0     1.0           plymouth satellite (sw)  \n",
+       "14         70.0     1.0                amc rebel sst (sw)  \n",
+       "17         70.0     1.0             ford mustang boss 302  \n",
+       "38         71.0     1.0                        ford pinto  \n",
+       "39         71.0     2.0       volkswagen super beetle 117  \n",
+       "133        74.0     1.0                     ford maverick  \n",
+       "337        80.0     2.0              renault lecar deluxe  \n",
+       "343        80.0     1.0                ford mustang cobra  \n",
+       "361        81.0     2.0                       renault 18i  \n",
+       "367        81.0     2.0                         saab 900s  \n",
+       "382        82.0     1.0                    amc concord dl  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_orig[df_orig.isna().any(axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>car_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [mpg, cylinders, displacement, horsepower, weight, acceleration, model_year, origin, car_name]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mpg_data[mpg_data.isna().any(axis=1)]"
    ]
   },
   {
