Residency 7 Internal Lab submission - final

--- a/R7_InternalLab_Hyd_Nov18_Prabodh.ipynb
+++ b/R7_InternalLab_Hyd_Nov18_Prabodh.ipynb
@@ -1006,17 +1006,54 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "ea719b53-ac24-465c-c44e-f947b008bfc6"
+        "outputId": "a7df4dd0-29ac-4682-c85a-262d5b8c870e"
       },
       "source": [
-        "model2conv.evaluate(x_test, y_test)"
+        "model2conv.evaluate(x_train, y_train)"
       ],
-      "execution_count": 23,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "10000/10000 [==============================] - 1s 88us/step\n"
+            "60000/60000 [==============================] - 5s 86us/step\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.28363443559010826, 0.89535]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "ZBwVWNQC2qZD",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "d13fc1c8-f5ba-4019-b9b6-cfd98dfba1f0"
+      },
+      "source": [
+        "model2conv.evaluate(x_test, y_test)"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10000/10000 [==============================] - 1s 87us/step\n"
           ],
           "name": "stdout"
         },
@@ -1030,22 +1067,9 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 25
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "ZBwVWNQC2qZD",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
